# rasp-door-monitor

./: Cargo.toml  README.md
src/rust/: camera.rs  detector.rs  main.rs  reed-detector.rs  reed_detector.rs  utils.rs
src/rust/capture/: camera.rs  mod.rs  raspicam.rs
src/rust/detector/: detector.rs  mod.rs  reed_detector.rs
src/rust/storage/: base.rs  local_to_s3.rs  mod.rs  s3_sync.rs
